--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
    <div class="card">
      <h2 id="myportfolio"><u>My Portfolio</u></a></h2>
       <div class="gallery">
-        <a target="_blank" href="/cv/image/LogoJ.png">
-          <img src="/cv/image/LogoJ.png" alt="LogoJ" width="600" height="400">
+        <a target="_blank" href="cv/image/LogoJ.png">
+          <img src="cv/image/LogoJ.png" alt="LogoJ" width="600" height="400">
         </a>
         <div class="desc">Logo Made From Potoshop</div>
       </div>
       <div class="gallery">
-        <a target="_blank" href="/cv/image/contoh1.jpg">
+        <a target="_blank" href="cv/image/contoh1.jpg">
           <img src="/cv/image/contoh1.jpg" alt="Beauty Retouch with Healing brush Potoshop" width="600" height="400">
         </a>
         <div class="desc">Beauty Retouch with Healing Brush Potoshop</div>
@@ -81,7 +81,7 @@
     <div class="rightcolumn">
       <div class="card">
         <h2><u>About Me</u></h2>
-        <img src="/foto/janux.jpg" width="270" height="270">
+        <img src="foto/janux.jpg" width="270" height="270">
         <p style="text-align:justify;">Hallo, My name is <b>Janu</b>. I am 27 years old and live at Bekasi Town. i am born in
           Bandung 08 jan '91, now i am as a jobseeker with a little skills and much experience that i have. I made this
           portfolio with HTML and CSS because i want to be a good programmer like steve job maybe, and i also can edit image
